--- a/International/about.html
+++ b/International/about.html
@@ -9,19 +9,6 @@
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-	<!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FreeHTML5.co
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -68,41 +55,40 @@
 	<div class="fh5co-loader"></div>
 
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="top-menu">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">International Restaurant<span>.</span></a></div>
-					</div>
-					<div class="col-xs-10 text-right menu-1">
-						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li class="has-dropdown">
-								<a href="order.html">Order</a>
-								<ul class="dropdown">
-									<li><a href="#">For Here</a></li>
-									<li><a href="#">To Go</a></li>
-								</ul>
-							</li>
-							<li><a href="reservation.html">Reservation</a></li>
-							<li class="has-dropdown">
-								<a href="advertisement.html">Advertisement</a>
-								<ul class="dropdown">
-									<li><a href="#">Event</a></li>
-									<li><a href="#">Survey</a></li>
-								</ul>
-							</li>
-							<li><a href="Inventory.html">Inventory</a></li>
-							<li><a href="about.html">About</a></li>
-							<li class="btn-cta"><a href="login.html"><span>Login</span></a></li>
-							<li class="btn-cta"><a href="signup.html"><span>Sign Up</span></a></li>
-						</ul>
+		<nav class="fh5co-nav" role="navigation">
+			<div class="top-menu">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-2">
+							<div id="fh5co-logo"><a href="index.html">International Restaurant<span>.</span></a></div>
+						</div>
+						<div class="col-xs-10 text-right menu-1">
+							<ul>
+								<a href="index.html">Home</a>
+								<li class="has-dropdown">
+									<a href="order.html">Order</a>
+									<ul class="dropdown">
+										<li><a href="#">For Here</a></li>
+										<li><a href="#">To Go</a></li>
+									</ul>
+								</li>
+								<li><a href="reservation.html">Reservation</a></li>
+								<li class="has-dropdown">
+									<a href="advertisement.html">Advertisement</a>
+									<ul class="dropdown">
+										<li><a href="#">Event</a></li>
+										<li><a href="#">Survey</a></li>
+									</ul>
+								</li>
+								<li><b href="about.html">about</b></li>
+								<li><a href="contact.html">Contact</a></li>
+								<li class="btn-cta"><a href="signin.html"><span>Sign in</span></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
 
 	<aside id="fh5co-hero" class="js-fullheight">
 		<div class="flexslider js-fullheight">
