--- a/International/account.html
+++ b/International/account.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -81,9 +80,15 @@
 									<li><a href="#">Survey</a></li>
 								</ul>
 							</li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="signin.html"><span>Sign in</span></a></li>
+							<li><a href="Inventory.html">Inventory</a></li>
+							<li class="has-dropdown">
+								<a href="account.html">Account</a>
+								<ul class="dropdown">
+									<li><a href="staffnum.html">Staff Num</a></li>
+									<li><a href="management.html">Management</a></li>
+								</ul>
+							</li>
+							<li class="btn-cta"><a href="php/logout.php"><span>Sign out</span></a></li>
 						</ul>
 					</div>
 				</div>
