--- a/International/logined_index.html
+++ b/International/logined_index.html
@@ -60,11 +60,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">International Restaurant<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="logined_index.html">International Restaurant<span>.</span></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<b href="index.html">Home</b>
+							<b href="logined_index.html">Home</b>
 							<li class="has-dropdown">
 								<a href="order.html">Order</a>
 								<ul class="dropdown">
@@ -82,7 +82,7 @@
 							</li>
 							<li><a href="Inventory.html">Inventory</a></li>
 							<li class="has-dropdown">
-								<a href="advertisement.html">Account</a>
+								<a href="account.html">Account</a>
 								<ul class="dropdown">
 									<li><a href="staffnum.html">Staff Num</a></li>
 									<li><a href="management.html">Management</a></li>
