--- a/International/signup.html
+++ b/International/signup.html
@@ -79,7 +79,7 @@
 									<li><a href="#">Survey</a></li>
 								</ul>
 							</li>
-							<li><a href="Inventory.html">Inventory</a></li>
+							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li class="btn-cta"><a href="signin.html"><span>Sign in</span></a></li>
 						</ul>
