--- a/International/advertisement.html
+++ b/International/advertisement.html
@@ -9,20 +9,6 @@
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-	<!--
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE
-	DESIGNED & DEVELOPED by FreeHTML5.co
-
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -93,7 +79,7 @@
 									<li><a href="#">Survey</a></li>
 								</ul>
 							</li>
-							<li><a href="Inventory.html">Inventory</a></li>
+							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li class="btn-cta"><a href="signin.html"><span>Sign in</span></a></li>
 						</ul>
