--- a/International/management.html
+++ b/International/management.html
@@ -54,40 +54,46 @@
 	<div class="fh5co-loader"></div>
 
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="top-menu">
-			<div class="container">
-				<div class="row">
-					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html">International Restaurant<span>.</span></a></div>
-					</div>
-					<div class="col-xs-10 text-right menu-1">
-						<ul>
-							<a href="index.html">Home</a>
-							<li class="has-dropdown">
-								<a href="order.html">Order</a>
-								<ul class="dropdown">
-									<li><a href="#">For Here</a></li>
-									<li><a href="#">To Go</a></li>
-								</ul>
-							</li>
-							<li><a href="reservation.html">Reservation</a></li>
-							<li class="has-dropdown">
-								<a href="advertisement.html">Advertisement</a>
-								<ul class="dropdown">
-									<li><a href="#">Event</a></li>
-									<li><a href="#">Survey</a></li>
-								</ul>
-							</li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="signin.html"><span>Sign in</span></a></li>
-						</ul>
+		<nav class="fh5co-nav" role="navigation">
+			<div class="top-menu">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-2">
+							<div id="fh5co-logo"><a href="index.html">International Restaurant<span>.</span></a></div>
+						</div>
+						<div class="col-xs-10 text-right menu-1">
+							<ul>
+								<a href="index.html">Home</a>
+								<li class="has-dropdown">
+									<a href="order.html">Order</a>
+									<ul class="dropdown">
+										<li><a href="#">For Here</a></li>
+										<li><a href="#">To Go</a></li>
+									</ul>
+								</li>
+								<li><a href="reservation.html">Reservation</a></li>
+								<li class="has-dropdown">
+									<a href="advertisement.html">Advertisement</a>
+									<ul class="dropdown">
+										<li><a href="#">Event</a></li>
+										<li><a href="#">Survey</a></li>
+									</ul>
+								</li>
+								<li><a href="Inventory.html">Inventory</a></li>
+								<li class="has-dropdown">
+									<a href="account.html">Account</a>
+									<ul class="dropdown">
+										<li><a href="staffnum.html">Staff Num</a></li>
+										<li><a href="management.html">Management</a></li>
+									</ul>
+								</li>
+								<li class="btn-cta"><a href="php/logout.php"><span>Sign out</span></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
 	<div>
 
 	</div>
@@ -96,27 +102,28 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 animate-box">
-					<h2>Sign in</h2>
-					<h4>Sign in to make faster reservations and enjoy exclusive member features.</h4>
+					<h2>Generate Staff Number</h2>
+					<h4>To generate a staff number, enter staff's user name.</h4>
 
-					<div><h5>If you don't have an account click <a class="url"><a href="signup.html">here</a> </h5></div>
-
-					<form action="php/signin.php" method="POST">
+						<form action="php/generatestaffnum.php" method="POST">
 						<div class="row form-group">
 							<div class="col-md-12">
-								<label for="email">Username</label>
-								<input type="text" name="username" class="form-control" placeholder="Username">
+								<label for="email">Staff's User Name</label>
+								<input type="text" name="username" class="form-control" placeholder="User name">
 							</div>
 						</div>
 						<div class="row form-group">
 							<div class="col-md-12">
-								<label for="password">Password</label>
-								<input type="password" name="fpassword" class="form-control" placeholder="Password">
+								<label for="staffnum">Staff Num</label>
+								<input type="text" name="staffnum" class="form-control" placeholder="Generated Staff Num will appear here">
 							</div>
 						</div>
 						<div class="form-group">
-							<input type="submit" value="Sign in" class="btn btn-primary">
+              <p align = "right">
+							<input type="submit" value="Create" class="btn btn-primary">
+              </p>
 						</div>
+
 					</form>
 				</div>
 			</div>
@@ -125,31 +132,31 @@
 	</div>
 
 
-	<footer id="fh5co-footer" role="contentinfo">
+  <footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-3 fh5co-widget">
-					<h4>Attorney's Law</h4>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<h4>International Restaurant</h4>
+					<p>Explain about Restaurant</p>
 				</div>
 				<div class="col-md-3 col-md-push-1">
 					<h4>Navigation</h4>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Home</a></li>
-						<li><a href="#">Practice Areas</a></li>
-						<li><a href="#">Won Cases</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">About us</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="order.html">Order</a></li>
+						<li><a href="reservation.html">Reservation</a></li>
+						<li><a href="advertisement.html">Advertisement</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3 col-md-push-1">
 					<h4>Contact Information</h4>
 					<ul class="fh5co-footer-links">
-						<li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>
-						<li><a href="tel://1234567920">+ 1235 2355 98</a></li>
-						<li><a href="mailto:info@yoursite.com">info@yoursite.com</a></li>
-						<li><a href="http://gettemplates.co">gettemplates.co</a></li>
+						<li>1217 8th St, Brookings, SD</li>
+						<li><a href="tel://1234567920">+1 6056912499</a></li>
+						<li><a href="mailto:drunkencodeinc@gmail.com">drunkencodeinc@gmail.com</a></li>
+						<li><a href="http://localhost/index.html">InternationalRestaurant.com</a></li>
 					</ul>
 				</div>
 
@@ -167,8 +174,8 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
-						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
+						<small class="block">&copy; 2016 International Restaurant. All Rights Reserved.</small>
+						<small class="block">Designed by <a href="#" target="_blank">DrunkencodeInc.</a> </small>
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
