--- a/International/index.html
+++ b/International/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,6 @@
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
-
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -65,7 +63,7 @@
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<b href="index.html">Home</b>
+							<b href="index.html">Hoeeme</b>
 							<li class="has-dropdown">
 								<a href="order.html">Order</a>
 								<ul class="dropdown">
