--- a/International/created_staffnum.html
+++ b/International/created_staffnum.html
@@ -108,7 +108,7 @@
 						<div class="row form-group">
 							<div class="col-md-12">
 								<label for="username">Staff's User Name</label>
-								<input type="text" name="username" class="form-control" placeholder="User name">
+								<h2><?php ?></h2>
 							</div>
 						</div>
 						<div class="form-group">
