--- a/International/index.html
+++ b/International/index.html
@@ -1,3 +1,9 @@
+<?php
+	session_start();
+	if(isset($_SESSION['is_login'])){
+		header('Location: logined/logined_index.html');
+	}
+?>
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -63,7 +69,7 @@
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<b href="index.html">Hoeeme</b>
+							<b href="index.html">Home</b>
 							<li class="has-dropdown">
 								<a href="order.html">Order</a>
 								<ul class="dropdown">
