--- a/International/index.html
+++ b/International/index.html
@@ -1,8 +1,5 @@
 <?php
-	session_start();
-	if(isset($_SESSION['is_login'])){
-		header('Location: logined/logined_index.html');
-	}
+	include 'php/logincheck.php';
 ?>
 <!DOCTYPE HTML>
 <html>
