--- a/International/logined/logined_index.html
+++ b/International/logined/logined_index.html
@@ -84,8 +84,8 @@
 							<li class="has-dropdown">
 								<a href="../account.html">Account</a>
 								<ul class="dropdown">
-									<li><a href="../staffnum.html">Staff Num</a></li>
-									<li><a href="../management.html">Management</a></li>
+									<li><a href="../php/staffnum.php">Staff Num</a></li>
+									<li><a href="../php/management.php">Management</a></li>
 								</ul>
 							</li>
 							<li class="btn-cta"><a href="../php/logout.php"><span>Sign out</span></a></li>
