--- a/International/customer/customer_index.html
+++ b/International/customer/customer_index.html
@@ -64,29 +64,25 @@
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<b href="../logined_index.html">Home</b>
+							<b href="index.html">Home</b>
 							<li class="has-dropdown">
-								<a href="../order.html">Order</a>
+								<a href="order.html">Order</a>
 								<ul class="dropdown">
 									<li><a href="#">For Here</a></li>
 									<li><a href="#">To Go</a></li>
 								</ul>
 							</li>
-							<li><a href="../reservation.html">Reservation</a></li>
+							<li><a href="reservation.html">Reservation</a></li>
 							<li class="has-dropdown">
-								<a href="../advertisement.html">Advertisement</a>
+								<a href="advertisement.html">Advertisement</a>
 								<ul class="dropdown">
 									<li><a href="#">Event</a></li>
 									<li><a href="#">Survey</a></li>
 								</ul>
 							</li>
-							<li><a href="../Inventory.html">Inventory</a></li>
+							<li><a href="contact.html">Contact</a></li>
 							<li class="has-dropdown">
 								<a href="../account.html">Account</a>
-								<ul class="dropdown">
-									<li><a href="../php/staffnum.php">Staff Num</a></li>
-									<li><a href="../php/management.php">Management</a></li>
-								</ul>
 							</li>
 							<li class="btn-cta"><a href="../php/logout.php"><span>Sign out</span></a></li>
 						</ul>
