--- a/International/customer/customer_index.html
+++ b/International/customer/customer_index.html
@@ -60,29 +60,29 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="../logined_index.html">International Restaurant<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="../index.html">International Restaurant<span>.</span></a></div>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
-							<b href="index.html">Home</b>
+							<b href="../index.html">Home</b>
 							<li class="has-dropdown">
-								<a href="order.html">Order</a>
+								<a href="../order.html">Order</a>
 								<ul class="dropdown">
 									<li><a href="#">For Here</a></li>
 									<li><a href="#">To Go</a></li>
 								</ul>
 							</li>
-							<li><a href="reservation.html">Reservation</a></li>
+							<li><a href="../reservation.html">Reservation</a></li>
 							<li class="has-dropdown">
-								<a href="advertisement.html">Advertisement</a>
+								<a href="../advertisement.html">Advertisement</a>
 								<ul class="dropdown">
 									<li><a href="#">Event</a></li>
 									<li><a href="#">Survey</a></li>
 								</ul>
 							</li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="../contact.html">Contact</a></li>
 							<li class="has-dropdown">
-								<a href="../account.html">Account</a>
+								<a href="../php/edit_account.php">Account</a>
 							</li>
 							<li class="btn-cta"><a href="../php/logout.php"><span>Sign out</span></a></li>
 						</ul>
