--- a/International/admin/admin_index.html
+++ b/International/admin/admin_index.html
@@ -72,7 +72,13 @@
 									<li><a href="#">To Go</a></li>
 								</ul>
 							</li>
-							<li><a href="../reservation.html">Reservation</a></li>
+							<li class="has-dropdown">
+								<a href="reservation.html">Reservation</a>
+								<ul class="dropdown">
+									<li><a href="../reservation.html">Create</a></li>
+									<li><a href="../php/manage_res.php">Manage</a></li>
+								</ul>
+							</li>
 							<li class="has-dropdown">
 								<a href="../advertisement.html">Advertisement</a>
 								<ul class="dropdown">
