--- a/International/reservation.html
+++ b/International/reservation.html
@@ -78,7 +78,7 @@
 								<a href="reservation.html">Reservation</a>
 								<ul class="dropdown">
 									<li><a href="reservation.html">Create</a></li>
-									<li><a href="/php/manage_res.php">Manage</a></li>
+									<li><a href="php/manage_res.php">Manage</a></li>
 								</ul>
 							</li>
 							<li class="has-dropdown">
@@ -113,7 +113,7 @@
 					</div>
 					<div class="col-md-4 col-md-pull-7">
 						<div class="booking-form">
-							<form action="/php/create_res.php" method="POST">
+							<form action="php/create_res.php" method="POST">
 								<div class="form-group">
 									<span class="form-label">Location of Restaurant</span>
 									<select class="form-control" name ="restaurant">
@@ -127,13 +127,13 @@
 									<div class="col-sm-6">
 										<div class="form-group">
 											<span class="form-label">Date</span>
-											<input class="form-control" type="date" name ="date"required>
+											<input class="form-control" type="date" name= "date" required>
 										</div>
 									</div>
 									<div class="col-sm-6">
 										<div class="form-group">
 											<span class="form-label">Time</span>
-											<input class="form-control" type="time" name = "time" required>
+											<input class="form-control" type="time" name="time" required>
 										</div>
 									</div>
 								</div>
@@ -141,7 +141,7 @@
 									<div class="col-sm-4">
 										<div class="form-group">
 											<span class="form-label">Seat</span>
-											<select class="form-control" name ="seat">
+											<select class="form-control" name="seat">
 												<option>1</option>
 												<option>2</option>
 												<option>3</option>
@@ -180,7 +180,7 @@
 									<div class="col-sm-4">
 										<div class="form-group">
 											<span class="form-label">Children</span>
-											<select class="form-control" name ="child">
+											<select class="form-control" name="child">
 												<option>0</option>
 												<option>1</option>
 												<option>2</option>
