--- a/International/customer/customer_index.html
+++ b/International/customer/customer_index.html
@@ -1,3 +1,7 @@
+<?php
+	session_start();
+	$username = $_SESSION['username'];
+?>
 <!DOCTYPE HTML>
 <html>
 	<head>
@@ -72,7 +76,13 @@
 									<li><a href="#">To Go</a></li>
 								</ul>
 							</li>
-							<li><a href="../reservation.html">Reservation</a></li>
+							<li class="has-dropdown">
+								<a href="../reservation.html">Reservation</a>
+								<ul class="dropdown">
+									<li><a href="../reservation.html">Create</a></li>
+									<li><a href="../php/manage_res.php">Manage</a></li>
+								</ul>
+							</li>
 							<li class="has-dropdown">
 								<a href="../advertisement.html">Advertisement</a>
 								<ul class="dropdown">
@@ -82,7 +92,7 @@
 							</li>
 							<li><a href="../contact.html">Contact</a></li>
 							<li class="has-dropdown">
-								<a href="../php/edit_account.php">Account</a>
+								<a href="../php/edit_account.php?username=<?php echo $username?>">Account</a>
 							</li>
 							<li class="btn-cta"><a href="../php/logout.php"><span>Sign out</span></a></li>
 						</ul>
