--- a/International/payorder.html
+++ b/International/payorder.html
@@ -119,7 +119,7 @@
 								<input type="text" name="csv" maxlength="3" class="form-control" placeholder="###">
 								
 								<br/>
-								<select name="expireMM" id="expireMM">
+								<select name="expireMM">
 									<option value=''>Month</option>
 									<option value='01'>January</option>
 									<option value='02'>February</option>
@@ -134,14 +134,14 @@
 									<option value='11'>November</option>
 									<option value='12'>December</option>
 								</select>
-								<select name="expireDD" id="expireDD">
+								<select name="expireDD">
 									<option value="18">2018</option>
-									<option value="18">2019</option>
-									<option value="18">2020</option>
-									<option value="18">2021</option>
-									<option value="18">2022</option>
-									<option value="18">2023</option>
-									<option value="18">2024</option>
+									<option value="19">2019</option>
+									<option value="20">2020</option>
+									<option value="21">2021</option>
+									<option value="22">2022</option>
+									<option value="23">2023</option>
+									<option value="24">2024</option>
 								</select>
 							</div>
 						</div>
