--- a/International/order_menu.html
+++ b/International/order_menu.html
@@ -70,7 +70,7 @@
 						<ul>
 							<b href="index.html">Home</b>
 							<li class="has-dropdown">
-								<a href="order.html">Order</a>
+								<a href="order_menu.html">Order</a>
 								<ul class="dropdown">
 									<li><a href="#">For Here</a></li>
 									<li><a href="#">To Go</a></li>
@@ -96,7 +96,7 @@
 
 <!-- new one -->
 	<div id="fh5co-contact">
-		<div class="mcontainer">
+		<div class="container">
 			<div class="row">
 
 				<h2>Order</h2>
