--- a/International/advertisement.html
+++ b/International/advertisement.html
@@ -95,7 +95,15 @@
 				<div class="col-md-9 animate-box">
 					<p>Create Advertisement</p>
 					<form action="createAd.php" method="POST">
-						<input type="text" name="title" class=>
+						<div class="row form-group">
+							<div class="col-md-9">
+								<label>Title</label>
+								<input type="text" name="fname" class="form-control" placeholder="Advertisement Title">
+							</div>
+							<div>
+							
+							</div>
+						</div>
 						
 					</form>
 				</div>
