--- a/International/admin/admin_index.html
+++ b/International/admin/admin_index.html
@@ -68,8 +68,8 @@
 							<li class="has-dropdown">
 								<a href="../order_menu.html">Order</a>
 								<ul class="dropdown">
-									<li><a href="#">For Here</a></li>
-									<li><a href="#">To Go</a></li>
+									<li><a href="../order_menu.html">For Here</a></li>
+									<li><a href="../order_menu.html">To Go</a></li>
 								</ul>
 							</li>
 							<li class="has-dropdown">
