--- a/International/index.html
+++ b/International/index.html
@@ -71,11 +71,17 @@
 							<li class="has-dropdown">
 								<a href="order_menu.html">Order</a>
 								<ul class="dropdown">
-									<li><a href="#">For Here</a></li>
-									<li><a href="#">To Go</a></li>
+									<li><a href="order_menu.html">For Here</a></li>
+									<li><a href="order_menu.html">To Go</a></li>
 								</ul>
 							</li>
-							<li><a href="reservation.html">Reservation</a></li>
+							<li class="has-dropdown">
+								<a href="reservation.html">Reservation</a>
+								<ul class="dropdown">
+									<li><a href="reservation.html">Create</a></li>
+									<li><a href="/php/manage_res.php">Manage</a></li>
+								</ul>
+							</li>
 							<li class="has-dropdown">
 								<a href="advertisement.html">Advertisement</a>
 								<ul class="dropdown">
