--- a/International/order_menu.html
+++ b/International/order_menu.html
@@ -93,7 +93,7 @@
 			</div>
 		</div>
 	</nav>
-
+</div>
 <!-- new one -->
 	<div id="fh5co-contact">
 		<div class="mcontainer">
@@ -120,7 +120,7 @@
 								<label class="mcontainer">
 									<input type="checkbox" name="check_list[]" value="Garlic Bread">
 									<img src="images/menu_garlic_bread.jpg" height=150 width=180 />
-									<label>Garlic Bread</label>
+									<label>Garlic Bread $4.5</label>
 									<span class="checkmark"></span>
 								</label>
 							</div>
@@ -134,7 +134,7 @@
 								<label class="mcontainer">
 									<input type="checkbox" name="check_list[]" value="Cheese Burger">
 									<img src="images/menu_cheese_burger.jpg" height=150 width=180 />
-									<label>Cheese Burger</label>
+									<label>Cheese Burger $6.5</label>
 									<span class="checkmark"></span>
 								</label>
 							</div>
@@ -144,7 +144,7 @@
 								<label class="mcontainer">
 									<input type="checkbox" name="check_list[]" value="Sweet Sour Pork">
 									<img src="images/menu_sweetsour_pork.jpg" height=150 width=180 />
-									<label>Sweet Sour Pork</label>
+									<label>Sweet Sour Pork $5.5</label>
 									<span class="checkmark"></span>
 								</label>
 							</div>
@@ -168,17 +168,6 @@
 	</div>
 
 
-
-
-
-
-
-
-
-
-
-
-	</div>
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
