--- a/International/admin/admin_index.html
+++ b/International/admin/admin_index.html
@@ -82,7 +82,7 @@
 							<li class="has-dropdown">
 								<a href="../advertisement.html">Advertisement</a>
 								<ul class="dropdown">
-									<li><a href="#">Event</a></li>
+									<li><a href="../advertisement_display.html">Event</a></li>
 									<li><a href="#">Survey</a></li>
 								</ul>
 							</li>
