--- a/International/index.html
+++ b/International/index.html
@@ -77,9 +77,9 @@
 							</li>
 							<li><a href="reservation.html">Reservation</a></li>
 							<li class="has-dropdown">
-								<a href="advertisement.html">Advertisement</a>
+								<a href="#">Advertisement</a>
 								<ul class="dropdown">
-									<li><a href="#">Event</a></li>
+									<li><a href="advertisement_display.html">Event</a></li>
 									<li><a href="#">Survey</a></li>
 								</ul>
 							</li>
