--- a/International/admin/admin_index.html
+++ b/International/admin/admin_index.html
@@ -113,7 +113,7 @@
 			   				<div class="slider-text-inner">
 									<h1>International Restaurant</h1>
 									<h2>Come in and have good time with good foods!</h2>
-									<p><a class="btn btn-primary btn-lg" href="reservation.html">Make A Reservation</a></p>
+									<p><a class="btn btn-primary btn-lg" href="../reservation.html">Make A Reservation</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -127,7 +127,7 @@
 			   				<div class="slider-text-inner">
 									<h1>International Restaurant</h1>
 									<h2>Come in and have good time with good foods!</h2>
-									<p><a class="btn btn-primary btn-lg" href="reservation.html">Make A Reservation</a></p>
+									<p><a class="btn btn-primary btn-lg" href="../reservation.html">Make A Reservation</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -141,7 +141,7 @@
 			   				<div class="slider-text-inner">
 									<h1>International Restaurant</h1>
 									<h2>Come in and have good time with good foods!</h2>
-									<p><a class="btn btn-primary btn-lg" href="reservation.html">Make A Reservation</a></p>
+									<p><a class="btn btn-primary btn-lg" href="../reservation.html">Make A Reservation</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -157,12 +157,12 @@
 				<div class="col-md-3 text-center animate-box">
 					<span class="icon"><i class="icon-user"></i></span>
 					<span class="fh5co-counter js-counter" data-from="0" data-to="27539" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Satisfied Clients</span>
+					<span class="fh5co-counter-label">Satisfied Customers</span>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<span class="icon"><i class="icon-speech-bubble"></i></span>
 					<span class="fh5co-counter js-counter" data-from="0" data-to="23563" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Cases Won</span>
+					<span class="fh5co-counter-label">Comments</span>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<span class="icon"><i class="icon-trophy"></i></span>
@@ -172,7 +172,7 @@
 				<div class="col-md-3 text-center animate-box">
 					<span class="icon"><i class="icon-users"></i></span>
 					<span class="fh5co-counter js-counter" data-from="0" data-to="2587" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Lawyers</span>
+					<span class="fh5co-counter-label">Chefs</span>
 				</div>
 			</div>
 		</div>
