--- a/International/customer/customer_index.html
+++ b/International/customer/customer_index.html
@@ -92,7 +92,7 @@
 							</li>
 							<li><a href="../contact.html">Contact</a></li>
 							<li class="has-dropdown">
-								<a href="../php/edit_account.php?username=<?php echo $username?>">Account</a>
+								<a href="../php/c_edit_account.php?username=<?php echo $username?>">Account</a>
 							</li>
 							<li class="btn-cta"><a href="../php/logout.php"><span>Sign out</span></a></li>
 						</ul>
@@ -157,12 +157,12 @@
 				<div class="col-md-3 text-center animate-box">
 					<span class="icon"><i class="icon-user"></i></span>
 					<span class="fh5co-counter js-counter" data-from="0" data-to="27539" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Satisfied Clients</span>
+					<span class="fh5co-counter-label">Satisfied Customers</span>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<span class="icon"><i class="icon-speech-bubble"></i></span>
 					<span class="fh5co-counter js-counter" data-from="0" data-to="23563" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Cases Won</span>
+					<span class="fh5co-counter-label">Comments</span>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<span class="icon"><i class="icon-trophy"></i></span>
@@ -172,7 +172,7 @@
 				<div class="col-md-3 text-center animate-box">
 					<span class="icon"><i class="icon-users"></i></span>
 					<span class="fh5co-counter js-counter" data-from="0" data-to="2587" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Lawyers</span>
+					<span class="fh5co-counter-label">Chefs</span>
 				</div>
 			</div>
 		</div>
