--- a/International/order_menu.html
+++ b/International/order_menu.html
@@ -86,7 +86,7 @@
 							</li>
 							<li><a href="Inventory.html">Inventory</a></li>
 							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="signin.html"><span>Sign in</span></a></li>
+							<li class="btn-cta"><a href="/php/logout.php"><span>Sign out</span></a></li>
 						</ul>
 					</div>
 				</div>
